| Summary: | ASTERISK-27404: DEBUG_FD_LEAKS does not record socketpair, timerfd_create or eventfd. | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2017-11-08 01:40:04.000-0600 | Date Closed: | 2017-11-17 09:27:41.000-0600 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Core/General |
| Versions: | 13.18.0 GIT 15.1.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | DEBUG_FD_LEAKS does not record socketpair, timerfd_create or eventfd. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2017-11-17 09:27:41.864-0600 Change 7115 merged by Joshua Colp: DEBUG_FD_LEAKS: Add missing FD creators. [https://gerrit.asterisk.org/7115|https://gerrit.asterisk.org/7115] | ||